# SnakeOpenGL

./: CMakeLists.txt
Dependencies/GLFW/include/GLFW/: glfw3.h
res/shaders/: basic.shader
src/: main.cpp
src/controller/: Coordinates.cpp  Coordinates.h  Inputs.cpp  Inputs.h
src/model/: Level.cpp  Level.h  Snake.cpp  Snake.h
src/view/: ErrorCatcher.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
